# profanity_filter

./: Cargo.toml  build.rs  demo_bg.wasm  index.html
.github/: dependabot.yml
.github/workflows/: demo.yaml  test.yaml
demo/: demo.js  demo_bg.wasm
examples/demo/: Cargo.toml  index.html
examples/demo/src/: lib.rs
src/: lib.rs
