[package]
name = "profanity_filter"
version = "0.1.0"
authors = ["Anders Evensen"]
edition = "2018"
publish = false

[dependencies]
word_filter = "0.5.0"

[build-dependencies]
word_filter_codegen = "0.5.0"

[features]
default = ["profane", "vulgar", "offensive", "middle-finger-emoji"]

profane = ["damn", "hell"]
damn = []
hell = []

vulgar = ["anal", "ass", "blow-job", "cunt", "fuck", "shit"]
anal = []
ass = []
blow-job = []
cunt = []
fuck = []
shit = []

offensive = ["bastard", "bitch", "faggot", "nigger", "slut"]
bastard = []
bitch = []
faggot = []
nigger = []
slut = []

middle-finger-emoji = []
