[package]
name = "profanity_filter"
version = "0.1.0"
authors = ["Anders Evensen"]
edition = "2018"
publish = false

[dependencies]
word_filter = {version = "0.6.0"}

[build-dependencies]
indoc = "1.0.3"
word_filter_codegen = {version = "0.6.0"}

[features]
default = ["profane", "vulgar", "offensive", "middle-finger-emoji"]

profane = ["damn", "hell"]
damn = []
hell = []

vulgar = [
    "anal",
    "ass",
    "blow-job",
    "cock",
    "cunt",
    "dick",
    "fuck",
    "jerk-off",
    "jizz",
    "penis",
    "sex",
    "shit",
    "vagina"
]
anal = []
ass = []
blow-job = []
cock = []
cunt = []
dick = []
fuck = []
jerk-off = []
jizz = []
penis = []
sex = []
shit = []
vagina = []

offensive = ["bastard", "bitch", "faggot", "nigger", "slut"]
bastard = []
bitch = []
faggot = []
nigger = []
slut = []

middle-finger-emoji = []
